<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#433D3D"
    tools:context=".ui.filter.FilterFragment">

    <TextView
        android:id="@+id/title_filter"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="@dimen/page_size"
        android:text="@string/Title_filter"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/page_size"
            android:text="@string/Status"
            android:textSize="@dimen/txt_size"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_status"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/page_8dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/ChipStyle"
                android:text="@string/Alive" />

            <com.google.android.material.chip.Chip
                style="@style/ChipStyle"
                android:text="@string/Dead" />

            <com.google.android.material.chip.Chip
                style="@style/ChipStyle"
                android:text="@string/Unknown" />


        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/page_size"
            android:text="@string/Gender"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>



        <RadioGroup
            android:id="@+id/radio_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/page_8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_female"
                style="@style/RadioButtonStyle"
                android:layout_width="@dimen/size_77dp"
                android:background="@drawable/radiobutton_female"
                android:text="@string/Female" />

            <RadioButton
                android:id="@+id/radio_male"
                style="@style/RadioButtonStyle"
                android:layout_width="86dp"
                android:background="@drawable/radiobutton_male"
                android:text="@string/Male" />

            <RadioButton
                android:id="@+id/radio_genderless"
                style="@style/RadioButtonStyle"
                android:layout_width="@dimen/size_77dp"
                android:background="@drawable/radiobutton_genderless"
                android:text="@string/Genderless" />

            <RadioButton
                android:id="@+id/radio_unknown"
                style="@style/RadioButtonStyle"
                android:layout_width="@dimen/size_77dp"
                android:background="@drawable/radiobutton_unknown"
                android:text="@string/Unknown" />

        </RadioGroup>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_apply_filter"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Apply"
        app:backgroundTint="@null"
        android:background="@drawable/ic_icon_bs1"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/page_24dp"
        android:layout_marginBottom="@dimen/page_size"/>


</LinearLayout>

